# SPL_Ass1

./: CMakeLists.txt  makefile
include/: Agent.h  Graph.h  Session.h  Tree.h  bfs.cpp  bfs.h
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
